examples/typeError/HidingVarError.lcp
A = ()
B = ((),())

x : B
x = ((),())

f : A -> B
f x = x
